--- a/Readme
+++ b/Readme
@@ -1,3 +1,3 @@
-** V0.01 of the game.**
+**V0.01 of the game.**
 
-##Managed to make a moving object (by FPS)
+##Managed to make a moving object (by FPS)##
